post ajax com angular

--- a/djangular2/base/static/js/login/login.html
+++ b/djangular2/base/static/js/login/login.html
@@ -2,14 +2,9 @@
 
   <form class="form-signin" role="form">
     <h2 class="form-signin-heading">Please sign in</h2>
-    <input type="email" class="form-control" placeholder="Email address" required="" autofocus="">
-    <input type="password" class="form-control" placeholder="Password" required="">
-    <div class="checkbox">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <input type="text" class="form-control" placeholder="Username" required="" autofocus="" ng-model="username">
+    <input type="password" class="form-control" placeholder="Password" required="" ng-model="password">
+    <button class="btn btn-lg btn-primary btn-block" ng-click="login()">Sign in</button>
   </form>
 
 </div>
