--- a/djangular2/base/static/js/login/login.html
+++ b/djangular2/base/static/js/login/login.html
@@ -4,7 +4,8 @@
     <h2 class="form-signin-heading">Please sign in</h2>
     <input type="text" class="form-control" placeholder="Username" required="" autofocus="" ng-model="username">
     <input type="password" class="form-control" placeholder="Password" required="" ng-model="password">
-    <button class="btn btn-lg btn-primary btn-block" ng-click="login()">Sign in</button>
+    <button class="btn btn-lg btn-primary btn-block" ng-click="login()">Entrar</button>
+    <button class="btn btn-lg btn-danger btn-block" ng-click="logout()">Sair</button>
     <button class="btn" ng-click="vai_baba()">Vai baba</button>
     <button class="btn" ng-click="vai_bibi()">Vai bibi</button>
   </form>
